--- a/res/layout/profile_bio.xml
+++ b/res/layout/profile_bio.xml
@@ -48,6 +48,7 @@
                 android:layout_weight="1"
                 android:ems="10" />
 
+           	<!-- 
             <TextView
                 android:id="@+id/TextView01"
                 android:layout_width="wrap_content"
@@ -61,6 +62,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10" />
+            -->
 
             <TextView
                 android:id="@+id/textView3"
@@ -79,7 +81,6 @@
                     android:id="@+id/radio0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checked="true"
                     android:text="@string/female" />
 
                 <RadioButton
@@ -90,6 +91,7 @@
 
             </RadioGroup>
 
+            <!--  
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
@@ -135,6 +137,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/jersey"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
+                -->
 
             <TableRow
                 android:id="@+id/tableRow2"
@@ -142,14 +145,14 @@
                 android:layout_height="wrap_content" >
 
                 <TextView
-                    android:id="@+id/TextView02"
+                    android:id="@+id/PrintJersey"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/double_zero"
+                    android:text="@string/zero"
                     android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <SeekBar
-                    android:id="@+id/SeekBar01"
+                    android:id="@+id/EditJersey"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </TableRow>
