--- a/res/layout/profile_bio.xml
+++ b/res/layout/profile_bio.xml
@@ -31,7 +31,11 @@
                 android:id="@+id/editName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10" >
+                android:layout_marginBottom="12dp"
+                android:ems="10"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="35sp" >
+
             </EditText>
 
             <TextView
@@ -45,8 +49,11 @@
                 android:id="@+id/editNickName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
                 android:layout_weight="1"
-                android:ems="10" />
+                android:ems="10"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="35sp" />
 
            	<!-- 
             <TextView
@@ -63,7 +70,7 @@
                 android:layout_weight="1"
                 android:ems="10" />
             -->
-
+			<!--
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
@@ -90,7 +97,7 @@
                     android:text="@string/male" />
 
             </RadioGroup>
-
+			-->
             <!--  
             <TextView
                 android:id="@+id/textView4"
@@ -131,14 +138,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <TextView
+            
+                -->
+			<TextView
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/jersey"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
-                -->
-
+			
             <TableRow
                 android:id="@+id/tableRow2"
                 android:layout_width="match_parent"
@@ -146,15 +154,20 @@
 
                 <TextView
                     android:id="@+id/PrintJersey"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_weight="2"
                     android:text="@string/zero"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="35sp" />
 
                 <SeekBar
                     android:id="@+id/EditJersey"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1" />
+
             </TableRow>
 
         </LinearLayout>
