--- a/res/layout/profile_bio.xml
+++ b/res/layout/profile_bio.xml
@@ -3,7 +3,9 @@
     android:id="@+id/ScoutContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <ScrollView
         android:id="@+id/ScrollView1"
@@ -17,8 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:focusable="true"
-    		android:focusableInTouchMode="true"
             >
 
             <TextView
